--- a/jquery/areas/jobseekers/events.html
+++ b/jquery/areas/jobseekers/events.html
@@ -32,12 +32,12 @@
 	<script src="../../scripts/libs/mustache.js"></script>
 	<script src="../../scripts/config.js"></script>
 	<script src="../../scripts/oauth.js"></script>
-	<script src="../../scripts/oauth.implicit.js"></script>
-	<script src="scripts/jobseekers.api.js"></script>
+	<script src="../../scripts/oauth.client-credentials.js"></script>
+	<script src="scripts/public.api.js"></script>
 	<script>
 
 		$(function() {
-			var eventsApi = ch.api.jobseekers.events,
+			var eventsApi = ch.api.public.events,
 				eventsList = $('.events-list'),
 				template = $('#event-list-item-template').html();
 
