Fix script src's and oauth scopes
Fix the paths to scripts for the public api and use separate scopes for
public and jobseeker areas.

--- a/jquery/areas/jobseekers/events.html
+++ b/jquery/areas/jobseekers/events.html
@@ -52,7 +52,8 @@
 					var rendered = Mustache.render(template, { events: data });
 					eventsList.html(rendered);
 				})
-				.fail(function() {
+				.fail(function(err) {
+					console.error(err);
 					eventsList.html('Could not load events!');
 				});
 		});
