Fix event dates

--- a/jquery/areas/jobseekers/events.html
+++ b/jquery/areas/jobseekers/events.html
@@ -18,7 +18,7 @@
 				<strong>Dates</strong>
 				<ul>
 					<li>Start: {{start}}</li>
-					<li>End: {{start}}</li>
+					<li>End: {{end}}</li>
 				</ul>
 			</p>
 			<h5>Summary</h5>
