--- a/jquery/areas/jobseekers/public/index.html
+++ b/jquery/areas/jobseekers/public/index.html
@@ -4,12 +4,10 @@
 </head>
 <body>
 	<h1>CareerHub Javascript Examples</h1>
-	<h2>JobSeeker Examples</h2>
-	<p>
-		This example uses the implicit auth flow
-	</p>
+	<h2>Public Examples</h2>
 	<ul>
 		<li><a href="events.html">Events</a></li>
+    <li><a href="appointments.html">Appointments</a></li>
 	</ul>
 </body>
 </html>
