--- a/jquery/index.html
+++ b/jquery/index.html
@@ -4,10 +4,15 @@
 </head>
 <body>
 	<h1>CareerHub Javascript Examples</h1>
+  <h2>Admin</h2>
+  <ul>
+    <li><a href="areas/admin/authorised/index.html">Authorised</a></li>
+  </ul>
+  <h2>JobSeekers</h2>
 	<ul>
-		<li><a href="areas/public/index.html">Public</a></li>
-		<li><a href="areas/jobseekers/index.html">JobSeekers</a></li>
-		<li><a href="areas/trusted/index.html">Trusted</a></li>
+		<li><a href="areas/jobseekers/public/index.html">Public</a></li>
+		<li><a href="areas/jobseekers/authorised/index.html">Authorised</a></li>
+		<li><a href="areas/jobseekers/trusted/index.html">Trusted</a></li>
 	</ul>
 </body>
 </html>
