--- a/jquery/areas/jobseekers/authorised/index.html
+++ b/jquery/areas/jobseekers/authorised/index.html
@@ -4,9 +4,13 @@
 </head>
 <body>
 	<h1>CareerHub Javascript Examples</h1>
-	<h2>Public Examples</h2>
+	<h2>JobSeeker Examples</h2>
+	<p>
+		This example uses the implicit auth flow
+	</p>
 	<ul>
 		<li><a href="events.html">Events</a></li>
+    <li><a href="jobs.html">Jobs</a></li>
 	</ul>
 </body>
 </html>
