--- a/jquery/areas/jobseekers/authorised/index.html
+++ b/jquery/areas/jobseekers/authorised/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 </head>
 <body>
 	<h1>CareerHub Javascript Examples</h1>
@@ -11,6 +13,7 @@
 	<ul>
 		<li><a href="events.html">Events</a></li>
     <li><a href="jobs.html">Jobs</a></li>
+    <li><a href="form-reports.html">Form Reports</a></li>
 	</ul>
 </body>
 </html>
